--- a/index.html
+++ b/index.html
@@ -4,43 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="css/noscript.css">
 </head>
-<body>
-    <header>
-        <h1>Your Name</h1>
-        <nav>
-            <ul>
-                <li><a href="#research">Research</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#students">Students</a></li>
-                <li><a href="#outreach">Outreach</a></li>
-                <li><a href="#teaching">Teaching</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section id="research">
-        <h2>Research</h2>
-        <p>Research content goes here.</p>
-    </section>
-    <section id="publications">
-        <h2>Publications</h2>
-        <p>Publications content goes here.</p>
-    </section>
-    <section id="students">
-        <h2>Students</h2>
-        <p>Students content goes here.</p>
-    </section>
-    <section id="outreach">
-        <h2>Outreach</h2>
-        <p>Outreach content goes here.</p>
-    </section>
-    <section id="teaching">
-        <h2>Teaching</h2>
-        <p>Teaching content goes here.</p>
-    </section>
-    <footer>
-        <p>&copy; 2024 Your Name</p>
-    </footer>
+<body class="is-preload">
+    <div id="wrapper">
+
+        <!-- Header -->
+        <header id="header">
+            <div class="inner">
+                <h1><a href="index.html" id="logo">Your Name</a></h1>
+                <nav id="nav">
+                    <ul>
+                        <li><a href="#research">Research</a></li>
+                        <li><a href="#publications">Publications</a></li>
+                        <li><a href="#students">Students</a></li>
+                        <li><a href="#outreach">Outreach</a></li>
+                        <li><a href="#teaching">Teaching</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <!-- Main -->
+        <div id="main">
+            <section id="research" class="main">
+                <header class="major">
+                    <h2>Research</h2>
+                </header>
+                <p>Research content goes here.</p>
+            </section>
+            <section id="publications" class="main">
+                <header class="major">
+                    <h2>Publications</h2>
+                </header>
+                <p>Publications content goes here.</p>
+            </section>
+            <section id="students" class="main">
+                <header class="major">
+                    <h2>Students</h2>
+                </header>
+                <p>Students content goes here.</p>
+            </section>
+            <section id="outreach" class="main">
+                <header class="major">
+                    <h2>Outreach</h2>
+                </header>
+                <p>Outreach content goes here.</p>
+            </section>
+            <section id="teaching" class="main">
+                <header class="major">
+                    <h2>Teaching</h2>
+                </header>
+                <p>Teaching content goes here.</p>
+            </section>
+        </div>
+
+        <!-- Footer -->
+        <footer id="footer">
+            <div class="inner">
+                <ul class="icons">
+                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                </ul>
+                <p>&copy; 2024 Your Name. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            </div>
+        </footer>
+    </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/browser.min.js"></script>
+    <script src="js/breakpoints.min.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
