--- a/index.html
+++ b/index.html
@@ -1,84 +1,114 @@
 <!DOCTYPE html>
+<!--
+    Author: Mehrnoosh Tahani, created by using examples from Jakyll
+    html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="css/noscript.css">
-</head>
-<body class="is-preload">
-    <div id="wrapper">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <title>Mehrnoosh Tahani</title>
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
+        <!-- <link rel="icon" type="image/png" href="images/logo.png"/> #when I  make a logo -->
+        <!-- <link rel="stylesheet" href="css/noscript.css"> -->
+    </head>
+    <body class="is-preload">
+        <div id="wrapper">
 
-        <!-- Header -->
-        <header id="header">
-            <div class="inner">
-                <h1><a href="index.html" id="logo">Your Name</a></h1>
+            <!-- Header -->
+            <section id="header">
+                <header>
+					<span class="image avatar"><img src="images/MehrnooshTahani.jpeg" alt="" /></span>
+					<h1 id="logo"><a href="#">Mehrnoosh Tahani</a></h1>
+					<p>Banting Fellow  <br> Stanford University. 
+				</header>
+
                 <nav id="nav">
-                    <ul>
-                        <li><a href="#research">Research</a></li>
+					<ul>
+						<li><a href="#Welcome" class="active">Welcome</a></li>
+						<li><a href="#research">Research</a></li>
                         <li><a href="#publications">Publications</a></li>
                         <li><a href="#students">Students</a></li>
+                        <li><a href="#teaching">Software</a></li>
                         <li><a href="#outreach">Outreach</a></li>
                         <li><a href="#teaching">Teaching</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<ul class="icons">
+						<li><a href="https://github.com/MehrnooshTahani" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:mehrnoosh.ta@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" class="icon solid fa-google-scholar"><span class="label">Email</span></a></li>
+						<li><a href="https://3dfields.github.io/3DFields/" class="icon brands fa-paperclip"><span class="label">ISM 3D Fields</span></a></li>
+						<li><a href="https://openculturalastronomyforum.github.io/" class="icon brands fa-paperclip"><span class="label">OCAF</span></a></li>
+					</ul>
+				</footer>
+            </section>
 
-        <!-- Main -->
-        <div id="main">
-            <section id="research" class="main">
-                <header class="major">
-                    <h2>Research</h2>
-                </header>
-                <p>Research content goes here.</p>
-            </section>
-            <section id="publications" class="main">
-                <header class="major">
-                    <h2>Publications</h2>
-                </header>
-                <p>Publications content goes here.</p>
-            </section>
-            <section id="students" class="main">
-                <header class="major">
-                    <h2>Students</h2>
-                </header>
-                <p>Students content goes here.</p>
-            </section>
-            <section id="outreach" class="main">
-                <header class="major">
-                    <h2>Outreach</h2>
-                </header>
-                <p>Outreach content goes here.</p>
-            </section>
-            <section id="teaching" class="main">
-                <header class="major">
-                    <h2>Teaching</h2>
-                </header>
-                <p>Teaching content goes here.</p>
-            </section>
+            <!-- Main -->
+            <div id="main">
+                <section id="research" class="main">
+                    <header class="major">
+                        <h2>Research</h2>
+                    </header>
+                    <div class="features">
+                        <!-- Repeat this block for each research topic -->
+                        <article>
+                            <a href="detailPage1.html" class="image"><img src="images/topic1.jpg" alt="Topic 1" /></a>
+                            <h3 class="major">Topic 1</h3>
+                            <p>Description of Topic 1 in brief...</p>
+                            <a href="detailPage1.html" class="special">Learn more</a>
+                        </article>
+                        <!-- Additional entries go here -->
+                    </div>
+                </section>
+                <section id="publications" class="main">
+                    <header class="major">
+                        <h2>Publications</h2>
+                    </header>
+                    <p>Publications content goes here.</p>
+                </section>
+                <section id="students" class="main">
+                    <header class="major">
+                        <h2>Students</h2>
+                    </header>
+                    <p>Students content goes here.</p>
+                </section>
+                <section id="outreach" class="main">
+                    <header class="major">
+                        <h2>Outreach</h2>
+                    </header>
+                    <p>Outreach content goes here.</p>
+                </section>
+                <section id="teaching" class="main">
+                    <header class="major">
+                        <h2>Teaching</h2>
+                    </header>
+                    <p>Teaching content goes here.</p>
+                </section>
+            </div>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <div class="inner">
+                    <ul class="icons">
+                        <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                    </ul>
+                    <p>&copy; 2024 Your Name. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                </div>
+            </footer>
         </div>
 
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="inner">
-                <ul class="icons">
-                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
-                <p>&copy; 2024 Your Name. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-            </div>
-        </footer>
-    </div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/browser.min.js"></script>
-    <script src="js/breakpoints.min.js"></script>
-    <script src="js/util.js"></script>
-    <script src="js/main.js"></script>
-</body>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/browser.min.js"></script>
+        <script src="js/breakpoints.min.js"></script>
+        <script src="js/util.js"></script>
+        <script src="js/main.js"></script>
+    </body>
 </html>
