--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
 						<li><a href="https://github.com/MehrnooshTahani" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:mehrnoosh.ta@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
                         <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en">
-                                <img src="https://img.icons8.com/color/48/google-scholar--v3.png" alt="Google Scholar" width="48" height="48"/>
-                                <span class="label">Google Scholar</span>
+                                <img src="https://img.icons8.com/color/48/google-scholar--v3.png"><span class="label">Google Scholar</span>
                             </a>
                         </li>
-						<li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" class="icon solid fa-google-scholar"><span class="label">Email</span></a></li>
+						<!-- <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" class="icon solid fa-google-scholar"><span class="label">Email</span></a></li> -->
 						<li><a href="https://3dfields.github.io/3DFields/" class="icon brands fa-paperclip"><span class="label">ISM 3D Fields</span></a></li>
 						<li><a href="https://openculturalastronomyforum.github.io/" class="icon brands fa-paperclip"><span class="label">OCAF</span></a></li>
 					</ul>
