--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
 					<ul class="icons">
 						<li><a href="https://github.com/MehrnooshTahani" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:mehrnoosh.ta@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-                        <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en">
-                                <img src="https://img.icons8.com/color/48/google-scholar--v3.png"><span class="label">Google Scholar</span>
-                            </a>
-                        </li>
+                        <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en"><img src="https://img.icons8.com/color/48/google-scholar--v3.png" width="32" height="32"><span class="label"></span></a></li>
 						<!-- <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" class="icon solid fa-google-scholar"><span class="label">Email</span></a></li> -->
-						<li><a href="https://3dfields.github.io/3DFields/" class="icon brands fa-paperclip"><span class="label">ISM 3D Fields</span></a></li>
+						<li><a href="https://3dfields.github.io/3DFields/"><img src="https://img.icons8.com/ios/50/internet--v1.png"><span class="label"></span>ISM 3D Fields</span></a></li>
 						<li><a href="https://openculturalastronomyforum.github.io/" class="icon brands fa-paperclip"><span class="label">OCAF</span></a></li>
 					</ul>
 				</footer>
