--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <!-- <link rel="stylesheet" href="css/noscript.css"> -->
     </head>
     <body class="is-preload">
-        <div id="wrapper">
 
-            <!-- Header -->
+        <!-- Header -->
             <section id="header">
                 <header>
 					<span class="image avatar"><img src="images/MehrnooshTahani.jpeg" alt="" /></span>
@@ -43,11 +42,14 @@
 						<li><a href="mailto:mehrnoosh.ta@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
                         <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en"><img src="https://img.icons8.com/color/48/google-scholar--v3.png" width="28" height="28"></span></a></li>
 						<!-- <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" class="icon solid fa-google-scholar"><span class="label">Email</span></a></li> -->
-						<li><a href="https://3dfields.github.io/3DFields/"><img src="https://img.icons8.com/ios/50/internet--v1.png" width="28" height="28"><span class="label"></span></a></li>
+						<li><a href="https://3dfields.github.io/3DFields/"><img src="https://img.icons8.com/ios/50/internet--v1.png" width="28" height="28"></a></li>
 						<li><a href="https://openculturalastronomyforum.github.io/"><img src="https://img.icons8.com/ios/50/internet--v1.png" width="28" height="28"><span class="label"></span></a></li>
 					</ul>
 				</footer>
             </section>
+
+        <!-- Wrapper -->
+			<div id="wrapper">
 
             <!-- Main -->
             <div id="main">
