--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 						<li><a href="https://github.com/MehrnooshTahani" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:mehrnoosh.ta@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
                         <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" class="icon solid fa-graduation-cap"><span class="label">Google Scholar</span></a></li>
-                        <li><a href="https://3dfields.github.io/3DFields/" class="icon fas fa-globe"><span class="label">3D Fields</span></a></li>
-                        <li><a href="https://openculturalastronomyforum.github.io/" class="icon fas fa-globe"><span class="label">OCAF</span></a></li>
+                        <li><a href="https://3dfields.github.io/3DFields/" class="icon solid fa-globe"><span class="label">3D Fields</span></a></li>
+                        <li><a href="https://openculturalastronomyforum.github.io/" class="icon solid fa-globe"><span class="label">OCAF</span></a></li>
 						<!-- <li><a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" class="icon solid fa-google-scholar"><span class="label">Email</span></a></li>
 						<li><a href="https://3dfields.github.io/3DFields/"><img src="https://img.icons8.com/ios/50/internet--v1.png" width="28" height="28"></a></li>
 						<li><a href="https://openculturalastronomyforum.github.io/"><img src="https://img.icons8.com/ios/50/internet--v1.png" width="28" height="28"><span class="label"></span></a></li> -->
