--- a/index.html
+++ b/index.html
@@ -54,47 +54,66 @@
 			<div id="wrapper">
 
             <!-- Main -->
-            <div id="main">
-                <section id="research" class="main">
-                    <header class="major">
-                        <h2>Research</h2>
-                    </header>
-                    <div class="features">
-                        <!-- Repeat this block for each research topic -->
-                        <article>
-                            <a href="detailPage1.html" class="image"><img src="images/topic1.jpg" alt="Topic 1" /></a>
-                            <h3 class="major">Topic 1</h3>
-                            <p>Description of Topic 1 in brief...</p>
-                            <a href="detailPage1.html" class="special">Learn more</a>
-                        </article>
-                        <!-- Additional entries go here -->
-                    </div>
-                </section>
-                <section id="publications" class="main">
-                    <header class="major">
-                        <h2>Publications</h2>
-                    </header>
-                    <p>Publications content goes here.</p>
-                </section>
-                <section id="students" class="main">
-                    <header class="major">
-                        <h2>Students</h2>
-                    </header>
-                    <p>Students content goes here.</p>
-                </section>
-                <section id="outreach" class="main">
-                    <header class="major">
-                        <h2>Outreach</h2>
-                    </header>
-                    <p>Outreach content goes here.</p>
-                </section>
-                <section id="teaching" class="main">
-                    <header class="major">
-                        <h2>Teaching</h2>
-                    </header>
-                    <p>Teaching content goes here.</p>
-                </section>
-            </div>
+                <div id="main">
+
+					<!-- Welcome-->
+                        <section id="welcome">
+                            <div class="image main" data-position="center">
+                                <img src="images/first_color_smooth.jpeg" alt="" />
+                            </div>
+                            <div class="container">
+                                <header class="major">
+                                    <h3>Mehrnoosh Tahani</h3>
+                                    <p> <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html ">Banting Fellow</a> at Stanford University </p>
+                                </header>
+                                <p> 
+                                mm
+                                </p>
+                            </div>
+                        </section>
+
+
+                <div id="main">
+                    <section id="research" class="main">
+                        <header class="major">
+                            <h2>Research</h2>
+                        </header>
+                        <div class="features">
+                            <!-- Repeat this block for each research topic -->
+                            <article>
+                                <a href="detailPage1.html" class="image"><img src="images/topic1.jpg" alt="Topic 1" /></a>
+                                <h3 class="major">Topic 1</h3>
+                                <p>Description of Topic 1 in brief...</p>
+                                <a href="detailPage1.html" class="special">Learn more</a>
+                            </article>
+                            <!-- Additional entries go here -->
+                        </div>
+                    </section>
+                    <section id="publications" class="main">
+                        <header class="major">
+                            <h2>Publications</h2>
+                        </header>
+                        <p>Publications content goes here.</p>
+                    </section>
+                    <section id="students" class="main">
+                        <header class="major">
+                            <h2>Students</h2>
+                        </header>
+                        <p>Students content goes here.</p>
+                    </section>
+                    <section id="outreach" class="main">
+                        <header class="major">
+                            <h2>Outreach</h2>
+                        </header>
+                        <p>Outreach content goes here.</p>
+                    </section>
+                    <section id="teaching" class="main">
+                        <header class="major">
+                            <h2>Teaching</h2>
+                        </header>
+                        <p>Teaching content goes here.</p>
+                    </section>
+                </div>
 
             <!-- Footer -->
             <footer id="footer">
