--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <header>
 					<span class="image avatar"><img src="images/MehrnooshTahani.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Mehrnoosh Tahani</a></h1>
-					<p>Banting Fellow  <br> Stanford University. 
+					<p>Banting Fellow  <br> Stanford University 
 				</header>
 
                 <nav id="nav">
@@ -29,8 +29,8 @@
 						<li><a href="#Welcome" class="active">Welcome</a></li>
 						<li><a href="#research">Research</a></li>
                         <li><a href="#publications">Publications</a></li>
+                        <li><a href="#software">Software</a></li>
                         <li><a href="#students">Students</a></li>
-                        <li><a href="#teaching">Software</a></li>
                         <li><a href="#outreach">Outreach</a></li>
                         <li><a href="#teaching">Teaching</a></li>
 						<li><a href="#contact">Contact</a></li>
@@ -59,7 +59,7 @@
 					<!-- Welcome-->
                         <section id="welcome">
                             <div class="image main" data-position="center">
-                                <img src="images/first_color_smooth.jpeg" alt="" />
+                                <img src="images/perseusField.pdf" alt="" />
                             </div>
                             <div class="container">
                                 <header class="major">
