--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<!-- Welcome-->
                         <section id="welcome">
                             <div class="image main" data-position="center">
-                                <img src="images/perseusField.pdf" alt="" />
+                                <img src="images/perseusField.png" alt="" />
                             </div>
                             <div class="container">
                                 <header class="major">
