--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                         <li><a href="#publications">Publications</a></li>
                         <li><a href="#software">Software</a></li>
                         <li><a href="#students">Students</a></li>
-                        <li><a href="#outreach">Outreach</a></li>
-                        <li><a href="#teaching">Teaching</a></li>
+                        <li><a href="#teaching_outreach">Teaching & Outreach</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -101,18 +100,11 @@
                         </header>
                         <p>Students content goes here.</p>
                     </section>
-                    <section id="outreach" class="main">
+                    <section id="teaching_outreach" class="main">
                         <header class="major">
-                            <h2>Outreach</h2>
+                            <h2>Teaching & Outreach</h2>
                         </header>
                         <p>Outreach content goes here.</p>
-                    </section>
-                    <section id="teaching" class="main">
-                        <header class="major">
-                            <h2>Teaching</h2>
-                        </header>
-                        <p>Teaching content goes here.</p>
-                    </section>
                 </div>
 
             <!-- Footer -->
