--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <nav id="nav">
 					<ul>
 						<li><a href="#Welcome" class="active">Welcome</a></li>
-						<li><a href="#research">Research</a></li>
-                        <li><a href="#publications">Publications</a></li>
+						<li><a href="#research_publications">Research & Publications</a></li>
                         <li><a href="#software">Software</a></li>
                         <li><a href="#students">Students</a></li>
                         <li><a href="#teaching_outreach">Teaching & Outreach</a></li>
@@ -63,10 +62,15 @@
                             <div class="container">
                                 <header class="major">
                                     <h3>Mehrnoosh Tahani</h3>
-                                    <p> <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html ">Banting Fellow</a> at Stanford University </p>
+                                    <p> <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html ">Banting Fellow</a> at Stanford University
+                                    </p>
                                 </header>
                                 <p> 
-                                mm
+
+                                    Welcome to my webpage! I am currently a Banting Postdoctoral Fellow, awarded by the Canadian government. With the privilege of conducting research at any university worldwide as a Banting Fellow, I chose Stanford University, where I also hold a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship.
+
+                                    My research explores the magnetic universe through observations, theory, simulations, and instrumentation. I study how galaxies evolve to form stars by mapping the 3D magnetic fields. These field geometries act as cosmic time capsules, revealing the history of galaxies in a way similar to how a dye highlights hidden patterns, offering valuable insights into our cosmic origins.
+                                
                                 </p>
                             </div>
                         </section>
