--- a/index.html
+++ b/index.html
@@ -62,54 +62,58 @@
                             <div class="container">
                                 <header class="major">
                                     <h3>Mehrnoosh Tahani</h3>
-                                    <p> <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html ">Banting Fellow</a> at Stanford University
-                                    </p>
                                 </header>
                                 <p> 
-
-                                    Welcome to my webpage! I am currently a Banting Postdoctoral Fellow, awarded by the Canadian government. With the privilege of conducting research at any university worldwide as a Banting Fellow, I chose Stanford University, where I also hold a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship.
-
-                                    My research explores the magnetic universe through observations, theory, simulations, and instrumentation. I study how galaxies evolve to form stars by mapping the 3D magnetic fields. These field geometries act as cosmic time capsules, revealing the history of galaxies in a way similar to how a dye highlights hidden patterns, offering valuable insights into our cosmic origins.
-                                
+                                    Welcome to my webpage! I am a <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html ">Banting Fellow</a>, awarded by the Canadian government. With the privilege of conducting research at any university worldwide as a Banting Fellow, I chose Stanford University, where I also hold a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship. I previously held a research associate position (Covington Fellow) at the <a href="https://nrc.canada.ca/en/research-development/nrc-facilities/dominion-radio-astrophysical-observatory-research-facility">Radio Astrophysical Observatory</a> with the National Research Council Canada(<a href="https://nrc.canada.ca/en/research-development/research-collaboration/research-centres/herzberg-astronomy-astrophysics-research-centre">NRC-Herzberg</a>). 
+                                </p>
+                                <p>    
+                                    My research explores the magnetic universe through observations, theory, simulations, and instrumentation. I study how galaxies evolve to form stars by mapping interstellar magnetic fields. These field geometries act as cosmic time capsules, revealing the history of galaxies much like a dye reveals hidden patterns, offering valuable insights into our cosmic origins.
                                 </p>
                             </div>
                         </section>
 
 
-                <div id="main">
-                    <section id="research" class="main">
-                        <header class="major">
-                            <h2>Research</h2>
-                        </header>
-                        <div class="features">
-                            <!-- Repeat this block for each research topic -->
-                            <article>
-                                <a href="detailPage1.html" class="image"><img src="images/topic1.jpg" alt="Topic 1" /></a>
-                                <h3 class="major">Topic 1</h3>
-                                <p>Description of Topic 1 in brief...</p>
-                                <a href="detailPage1.html" class="special">Learn more</a>
-                            </article>
-                            <!-- Additional entries go here -->
+                    <!-- research_publications-->
+                        <section id="research_publications">
+                            <div class="container">
+                                <h3>Research</h3>
+                                <h5>
+                                    <b>I highlight some of my work below. For a full list of publications, please click on 
+                                        <a href="https://ui.adsabs.harvard.edu/public-libraries/3whtBFLQRRW_e_qRFf9Z-g">this ADS link</a>
+                                        or visit my <a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en">Google Scholar profile</a>.
+										</b>
+									</h5>
+                                
+                                <div class="features">
+                                    <!-- Repeat this block for each research topic -->
+                                    <article>
+                                        <a href="detailPage1.html" class="image"><img src="images/topic1.jpg" alt="Topic 1" /></a>
+                                        <h3 class="major">Topic 1</h3>
+                                        <p>Description of Topic 1 in brief...</p>
+                                        <a href="detailPage1.html" class="special">Learn more</a>
+                                    </article>
+                                    <!-- Additional entries go here -->
+                                </div>
+                            </section>
+
+                            <section id="publications" class="main">
+                                <header class="major">
+                                    <h2>Publications</h2>
+                                </header>
+                                <p>Publications content goes here.</p>
+                            </section>
+                            <section id="students" class="main">
+                                <header class="major">
+                                    <h2>Students</h2>
+                                </header>
+                                <p>Students content goes here.</p>
+                            </section>
+                            <section id="teaching_outreach" class="main">
+                                <header class="major">
+                                    <h2>Teaching & Outreach</h2>
+                                </header>
+                                <p>Outreach content goes here.</p>
                         </div>
-                    </section>
-                    <section id="publications" class="main">
-                        <header class="major">
-                            <h2>Publications</h2>
-                        </header>
-                        <p>Publications content goes here.</p>
-                    </section>
-                    <section id="students" class="main">
-                        <header class="major">
-                            <h2>Students</h2>
-                        </header>
-                        <p>Students content goes here.</p>
-                    </section>
-                    <section id="teaching_outreach" class="main">
-                        <header class="major">
-                            <h2>Teaching & Outreach</h2>
-                        </header>
-                        <p>Outreach content goes here.</p>
-                </div>
 
             <!-- Footer -->
             <footer id="footer">
