--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
                                 									
 									<div class="features">
 										<article id="research1">
-											<div class="inner">
+											<div class="container">
 												<h4>An Innovative Technique for Next-Generation Radio Astronomy</h4>
 												<p>
 													Although there is an abundance of plane-of-sky magnetic field observations associated with molecular clouds, observations of their line-of-sight magnetic fields (B<sub>los</sub>) are extremely limited. To address this issue, I developed a novel technique (named MC-BLOS) based on Faraday rotation to determine B<sub>los</sub> associated with molecular clouds (Tahani et al. 2018). Faraday rotation is the rotation of the polarization plane of a linearly polarized electromagnetic wave as it passes through a magneto-ionic medium. 
-                                                <br></br>   
-                                                Due to the lower abundance of electrons in molecular clouds (a type of interstellar cloud known as a star-formation nursery) using the Faraday rotation technique to probe their magnetic fields was previously thought to be impossible. This technique utilizes the Faraday rotation of unresolved point sources (radio galaxies or pulsars), an ON-OFF approach, a chemical evolution code, and column density maps of the clouds. Please watch this <a href="video-link">video</a> for a simplified explanation of the technique.
+                                                </p>
+                                                <p>  
+                                                    Due to the lower abundance of electrons in molecular clouds (a type of interstellar cloud known as a star-formation nursery) using the Faraday rotation technique to probe their magnetic fields was previously thought to be impossible. This technique utilizes the Faraday rotation of unresolved point sources (radio galaxies or pulsars), an ON-OFF approach, a chemical evolution code, and column density maps of the clouds. Please watch this <a href="video-link">video</a> for a simplified explanation of the technique.
 												</p>
                                             </div>
                                             <a href="#research1" class="image"><img src="images/BLOS.png" alt="" /></a>
@@ -126,9 +127,11 @@
 											<div class="inner">
                                                 <h4>Revealing the Formation Path of Clouds through 3D Magnetic Fields and Identification of Unknown Structure</h4>
 												<p>
-
+                                                    In <a href="https://ui.adsabs.harvard.edu/abs/2022FrASS...9.0027T/abstract">this work</a>, we reconstructed the complete 3D magnetic field vectors of the Perseus cloud for the first time. This field geometry is concave from our point of view, with the field lines pointing in the direction of decreasing longitude when projected onto the plane of the sky. The determination of 3D field vectors allowed me to propose a detailed step-by-step formation and evolution scenario for the Perseus cloud, closely linked to the influence of nearby super-bubbles. I hypothesized that the cloud's field geometry resulted from interactions with the Per-Tau bubble and another previously unidentified structure. The influence of this structure was subsequently confirmed by <a href=" https://ui.adsabs.harvard.edu/abs/2022AJ....164...57K/abstract"> kinematic observations</a>, supporting our 3D magnetic field vectors and the proposed formation scenario for the cloud.
 												</p>
 											</div>
+                                            <a href="#research1" class="image"><img src="images/Perseus_3D_vector.pdf" alt="" /></a>
+                                            <a href="#research1" class="image"><img src="images/BLOS.png" alt="" /></a>
 										</article>
 
                                         <article id="research5">
