--- a/index.html
+++ b/index.html
@@ -87,20 +87,25 @@
 									<div class="features">
 										<article id="research1">
 											<div class="container">
-												<h4>An Innovative Technique for Next-Generation Radio Astronomy</h4>
+												<h2>An Innovative Technique for Next-Generation Radio Astronomy</h2>
+                                                <p>
+            									</p>
 												<p>
 													Although there is an abundance of plane-of-sky magnetic field observations associated with molecular clouds, observations of their line-of-sight magnetic fields (B<sub>los</sub>) are extremely limited. To address this issue, I developed a novel technique (named MC-BLOS) based on Faraday rotation to determine B<sub>los</sub> associated with molecular clouds (Tahani et al. 2018). Faraday rotation is the rotation of the polarization plane of a linearly polarized electromagnetic wave as it passes through a magneto-ionic medium. 
                                                 </p>
-                                                <p>  
-                                                    Due to the lower abundance of electrons in molecular clouds (a type of interstellar cloud known as a star-formation nursery) using the Faraday rotation technique to probe their magnetic fields was previously thought to be impossible. This technique utilizes the Faraday rotation of unresolved point sources (radio galaxies or pulsars), an ON-OFF approach, a chemical evolution code, and column density maps of the clouds. Please watch this <a href="video-link">video</a> for a simplified explanation of the technique.
-												</p>
+                                                <div class="container">
+                                                    <p>  
+                                                        Due to the lower abundance of electrons in molecular clouds (a type of interstellar cloud known as a star-formation nursery) using the Faraday rotation technique to probe their magnetic fields was previously thought to be impossible. This technique utilizes the Faraday rotation of unresolved point sources (radio galaxies or pulsars), an ON-OFF approach, a chemical evolution code, and column density maps of the clouds. Please watch this <a href="video-link">video</a> for a simplified explanation of the technique.
+                                                    </p>
+                                                <a href="#research1" class="image"><img src="images/BLOS.png" alt="" /></a>
+                                                </div>
                                             </div>
-                                            <a href="#research1" class="image"><img src="images/BLOS.png" alt="" /></a>
+                                            
 										</article>
 
                                         <article id="research2">
 											<div class="container">
-												<h4>First Line-of-Sight Magnetic Field Maps of Some Molecular Clouds</h4>
+												<h2>First Line-of-Sight Magnetic Field Maps of Some Molecular Clouds</h2>
 												<p>
                                                     I mapped the line-of-sight magnetic fields of the Orion A, Orion B, Perseus, and California molecular clouds, using <a href="#research1">the MC-BLOS technique</a>. Our findings are closely aligned with the available nearby molecular Zeeman measurements, thereby validating the effectiveness of our technique.
                                                 </p>
