--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <!-- research_publications-->
                         <section id="research_publications">
                             <div class="container">
-                                <h3>Research & Publications</h3>
+                                <h2>Research & Publications</h2>
                                 <h5>
                                     <b>I highlight some of my work below. For a full list of publications, please click on 
                                         <a href="https://ui.adsabs.harvard.edu/public-libraries/3whtBFLQRRW_e_qRFf9Z-g">this ADS link</a>
@@ -87,7 +87,7 @@
 									<div class="features">
 										<article id="research1">
 											<div class="container">
-												<h2>An Innovative Technique for Next-Generation Radio Astronomy</h2>
+												<h4>An Innovative Technique for Next-Generation Radio Astronomy</h4>
                                                 <p>
             									</p>
 												<p>
@@ -97,15 +97,15 @@
                                                     <p>  
                                                         Due to the lower abundance of electrons in molecular clouds (a type of interstellar cloud known as a star-formation nursery) using the Faraday rotation technique to probe their magnetic fields was previously thought to be impossible. This technique utilizes the Faraday rotation of unresolved point sources (radio galaxies or pulsars), an ON-OFF approach, a chemical evolution code, and column density maps of the clouds. Please watch this <a href="video-link">video</a> for a simplified explanation of the technique.
                                                     </p>
-                                                <a href="#research1" class="image"><img src="images/BLOS.png" alt="" /></a>
                                                 </div>
+                                                <a href="#research1" class="image"><img src="images/BLOS.png" alt="" /></a>
                                             </div>
                                             
 										</article>
 
                                         <article id="research2">
 											<div class="container">
-												<h2>First Line-of-Sight Magnetic Field Maps of Some Molecular Clouds</h2>
+												<h4>First Line-of-Sight Magnetic Field Maps of Some Molecular Clouds</h4>
 												<p>
                                                     I mapped the line-of-sight magnetic fields of the Orion A, Orion B, Perseus, and California molecular clouds, using <a href="#research1">the MC-BLOS technique</a>. Our findings are closely aligned with the available nearby molecular Zeeman measurements, thereby validating the effectiveness of our technique.
                                                 </p>
@@ -128,12 +128,13 @@
 										</article>
 
                                         <article id="research4">
-											<a href="#research4" class="image"><img src="OrionA3D.png" alt="" /></a>
-											<div class="inner">
+											<div class="container">
                                                 <h4>Revealing the Formation Path of Clouds through 3D Magnetic Fields and Identification of Unknown Structure</h4>
-												<p>
-                                                    In <a href="https://ui.adsabs.harvard.edu/abs/2022FrASS...9.0027T/abstract">this work</a>, we reconstructed the complete 3D magnetic field vectors of the Perseus cloud for the first time. This field geometry is concave from our point of view, with the field lines pointing in the direction of decreasing longitude when projected onto the plane of the sky. The determination of 3D field vectors allowed me to propose a detailed step-by-step formation and evolution scenario for the Perseus cloud, closely linked to the influence of nearby super-bubbles. I hypothesized that the cloud's field geometry resulted from interactions with the Per-Tau bubble and another previously unidentified structure. The influence of this structure was subsequently confirmed by <a href=" https://ui.adsabs.harvard.edu/abs/2022AJ....164...57K/abstract"> kinematic observations</a>, supporting our 3D magnetic field vectors and the proposed formation scenario for the cloud.
-												</p>
+											
+                                                <div class="inner">
+                                                    <p>
+                                                        In <a href="https://ui.adsabs.harvard.edu/abs/2022FrASS...9.0027T/abstract">this work</a>, we reconstructed the complete 3D magnetic field vectors of the Perseus cloud for the first time. This field geometry is concave from our point of view, with the field lines pointing in the direction of decreasing longitude when projected onto the plane of the sky. The determination of 3D field vectors allowed me to propose a detailed step-by-step formation and evolution scenario for the Perseus cloud, closely linked to the influence of nearby super-bubbles. I hypothesized that the cloud's field geometry resulted from interactions with the Per-Tau bubble and another previously unidentified structure. The influence of this structure was subsequently confirmed by <a href=" https://ui.adsabs.harvard.edu/abs/2022AJ....164...57K/abstract"> kinematic observations</a>, supporting our 3D magnetic field vectors and the proposed formation scenario for the cloud.
+                                                    </p>
 											</div>
                                             <a href="#research1" class="image"><img src="images/Perseus_3D_vector.pdf" alt="" /></a>
                                             <a href="#research1" class="image"><img src="images/BLOS.png" alt="" /></a>
