--- a/index.html
+++ b/index.html
@@ -98,13 +98,11 @@
                                                 </p>
                                                 <div class="container">
                                                     <div class="row">
-                                                        <div class="col-8">
-                                                            <p>  
-                                                                Due to the lower abundance of electrons in molecular clouds (a type of interstellar cloud known as a star-formation nursery) using the Faraday rotation technique to probe their magnetic fields was previously thought to be impossible. This technique utilizes the Faraday rotation of unresolved point sources (radio galaxies or pulsars), an ON-OFF approach, a chemical evolution code, and column density maps of the clouds. Please watch this <a href="video-link">video</a> for a simplified explanation of the technique.
-                                                            </p>
+                                                        <div class="col-6 col-12-small">
+                                                            <a href="#research1" class="image left"><img src="images/BLOS.png" alt="" style="width:100%;"/></a>
                                                         </div>
-                                                        <div class="col-4">
-                                                            <a href="#research1" class="image fit"><img src="images/BLOS.png" alt="BLOS Technique Image" /></a>
+                                                        <div class="col-6 col-12-small">
+                                                            <p>Due to the lower abundance of electrons in molecular clouds (a type of interstellar cloud known as a star-formation nursery) using the Faraday rotation technique to probe their magnetic fields was previously thought to be impossible. This technique utilizes the Faraday rotation of unresolved point sources (radio galaxies or pulsars), an ON-OFF approach, a chemical evolution code, and column density maps of the clouds. Please watch this <a href="video-link">video</a> for a simplified explanation of the technique.</p>
                                                         </div>
                                                     </div>
                                                 </div>
