More style edits

--- a/index.html
+++ b/index.html
@@ -392,6 +392,15 @@
                             </div>
                         </section>
 
+
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; Mehrnoosh Tahani, 2022. </li>
+							</ul>
+						</div>
+					</section>
+
         <script src="js/jquery.min.js"></script>
         <script src="js/browser.min.js"></script>
         <script src="js/breakpoints.min.js"></script>
