--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section id="header">
                 <header>
 					<span class="image avatar"><img src="images/MehrnooshTahani.jpeg" alt="Mehrnoosh Tahani" /></span>
-					<h1 id="logo"><a href="#">Mehrnoosh Tahani</a></h1>
+					<h1 id="logo"><a href="#Mehrnoosh Tahani">Mehrnoosh Tahani</a></h1>
 					<p>Banting Fellow  <br> Stanford University 
 				</header>
 
@@ -358,7 +358,7 @@
                                     <article id="teaching">
                                         <!-- <a href="#teaching_outreach" class="image"><img src="images/OrionA3D.png" alt="" /></a> -->
                                             <p>
-                                                I have taught twice as a sessional instructor at the University of Calgary, where I was responsible for all aspects of course delivery, including lecture preparation, course design, content development, and assessment creation. I also have served as a teaching assistant and guest lecturer in various courses across multiple universities, teaching in two languages (English and Farsi/Persian).
+                                                I have taught twice as a Sessional Instructor at the University of Calgary, where I was responsible for all aspects of course delivery, including lecture preparation, course design, content development, and assessment creation. I also have served as a teaching assistant and guest lecturer in various courses across multiple universities, teaching in two languages (English and Farsi/Persian).
                                             </p>
                                             <p>  
                                                 I have received teaching awards, most notably from the <a href="https://taylorinstitute.ucalgary.ca/" target="_blank">Taylor Institute for Teaching and Learning</a> at the University of Calgary. My teaching portfolio includes courses such as: 
