Minor text correction

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                         <h5>Current:</h5>
                                         <p>
                                             Carlos Rodriguez, <span style="font-size: 0.75em;">undergraduate student, Stanford, USA</span><br>
-                                            Fyza Parviz, <span style="font-size: 0.75em;">research assistant, Stanford, USA</span><br>
+                                            Fyza Parviz Jazra, <span style="font-size: 0.75em;">research assistant, Stanford, USA</span><br>
                                             Haleh Hajizadeh, <span style="font-size: 0.75em;">PhD student, University of Calgary, Canada</span><br>
                                             Khwaish Billore, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
                                             Minjie Lei, <span style="font-size: 0.75em;">PhD Candidate, Stanford, USA</span><br>
