--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                             Matthew Bouchard, <span style="font-size: 0.75em;">Undergraduate student, University of Calgary, Canada</span><br>
                                             Patrick Tupoumalohi, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
                                             Ryan Anthony Clairmont, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
-                                            Violet Zhou, <span style="font-size: 0.75em;">undergraduate student, Stanford, USA</span>
+                                            Violet Zhou, <span style="font-size: 0.75em;">undergraduate student, Stanford, USA</span><br>
                                             Wednesday Lupypciw, <span style="font-size: 0.75em;">co-op student, National Research Council Canada, DRAO, Canada</span>
                                         </p>
                                     </article>
