--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <header>
 					<span class="image avatar"><img src="images/MehrnooshTahani.jpeg" alt="Mehrnoosh Tahani" /></span>
 					<h1 id="logo"><a href="#Mehrnoosh Tahani">Mehrnoosh Tahani</a></h1>
-					<p>Banting Fellow  <br> Stanford University 
+					<p>Astrophysicist  <br> Stanford University 
 				</header>
 
                 <nav id="nav">
